== 0.2 ==
- intabrec: specification for addressing records and fields

== 0.1 ==
initial version